--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "postinstall": "node_modules/.bin/bower install",
     "postupdate": "node_modules/.bin/bower update",
-    "start": "node src/app/server/app.js"
+    "start": "node src/app/app.js"
   },
   "dependencies": {
     "URIjs": "1.13.x",
