--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -10,6 +10,7 @@
     "q": "1.0.1",
     "querystring": "~3.24.10",
     "moment": "~2.6.0",
-    "jquery-mmenu": "~4.0.3"
+    "jquery-mmenu": "~4.0.3",
+    "jquery-mobile-bower": "~1.4.2"
   }
 }
