--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-stylus": "0.16.0",
     "grunt-contrib-watch": "0.6.x",
+    "grunt-exec": "^0.4.5",
     "load-grunt-tasks": "0.4.0",
     "stylus": "0.45.1"
   }
