--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,17 @@
   "version": "0.3.1",
   "scripts": {
     "postinstall": "node_modules/.bin/bower install",
-    "postupdate": "node_modules/.bin/bower update",
-    "start": "node src/app/server/app.js"
+    "postupdate": "node_modules/.bin/bower update"
   },
   "devDependencies": {
     "bower": "1.3.3",
-    "connect-livereload": "^0.4.0",
+    "cordova": "^3.5.0-0.2.4",
     "grunt": "0.4.5",
-    "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-stylus": "0.16.0",
-    "grunt-contrib-watch": "0.6.x",
     "grunt-exec": "^0.4.5",
     "load-grunt-tasks": "0.4.0",
+    "phonegap": "^3.4.0-0.20.0",
     "stylus": "0.45.1"
   }
 }
