--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -6,10 +6,8 @@
     "videojs": "4.6.1",
     "videojs-youtube": "1.1.0",
     "mousetrap": "~1.4.6",
-    "nedb": "*",
     "q": "1.0.1",
     "querystring": "~3.24.10",
-    "moment": "~2.6.0",
-    "jquery-mobile-bower": "~1.4.2"
+    "moment": "~2.6.0"
   }
 }
