--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -8,6 +8,7 @@
     "mousetrap": "~1.4.6",
     "q": "1.0.1",
     "querystring": "~3.24.10",
-    "moment": "~2.6.0"
+    "moment": "~2.6.0",
+    "ratchet2": "*"
   }
 }
