--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "popcorn-time",
   "dependencies": {
+    "jquery": "2.1.1",    
     "marionette": "~1.8.3",
     "bootstrap": "~3.1.1",
     "videojs": "4.6.1",
