--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -2,6 +2,7 @@
   "name": "popcorn-time",
   "dependencies": {
     "jquery": "2.1.1",    
+    "jquery.transit": "latest", 
     "marionette": "~1.8.3",
     "bootstrap": "~3.1.1",
     "videojs": "4.6.1",
